Add TASKYR project page, update p3s-vscode page...

--- a/index.html
+++ b/index.html
@@ -114,11 +114,16 @@
             <h3>Unity Sprite Voxellator</h3>
             <p>A tool for the Unity editor that turns sprites into 3D voxel meshes</p>
         </a>
-        <a href="screenshotter" class="projects-item">
+        <a href="taskyr" class="projects-item">
+            <img src="img/projects/taskyr/taskyr-2.PNG" alt="TASKYR" class="project-image">
+            <h3>TASKYR</h3>
+            <p>A simple yet powerful productivity tool designed to help you stay focused and manage your time effectively!</p>
+        </a>
+        <!--<a href="screenshotter" class="projects-item">
             <img src="img/projects/screenshotter/screenshotter.gif" alt="SCREENSHOTTER" class="project-image">
             <h3>SCREENSHOTTER</h3>
             <p>A simple tool to quickly and easily take cropped screenshots!</p>
-        </a>
+        </a>-->
         <a href="p3s-documentation" class="projects-item">
             <img src="img/projects/p3s-documentation/p3-script-documentation.png" alt="Postal3Script Documentation" class="project-image">
             <h3>Postal3Script Documentation</h3>
