--- a/taskyr.html
+++ b/taskyr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Postal3Script Language Support for VSCode - Pseudonym_Tim</title>
+    <title>TASKYR - Pseudonym_Tim</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
@@ -27,18 +27,21 @@
 
 <!-- Section -->
 <section class="project-section">
-    <h2>Postal3Script Language Support for VSCode</h2>
-    <p>Postal3Script (.p3s) language support extension for Visual Studio Code with syntax highlighting and code snippets, written in JSON</p>
-    <b>Language:</b> JSON
+    <h2>TASKYR</h2>
+    <p>TASKYR is a simple yet powerful productivity tool designed to help you stay focused and manage your time effectively. 
+    <br>Developed using C# and WinForms on the .NET framework, TASKYR provides essential features to block distracting programs and websites, allowing you to concentrate on what truly matters.
+    <br>
+    <br>
+    <b>Language:</b> C#
     <br>
     <b>Status:</b> <b style="color: rgb(10, 221, 38);">RELEASED!</b>
     <div class="button-container">
-        <a href="https://github.com/Pseudonym-Tim/postal3script_vscode">
+        <a href="https://github.com/Pseudonym-Tim/TASKYR">
             <button class="button">
                 <i class="fab fa-github"></i> View On Github
             </button>
         </a> 
-        <a href="https://github.com/Pseudonym-Tim/postal3script_vscode">
+        <a href="https://github.com/Pseudonym-Tim/TASKYR/releases/latest/download/TASKYR.zip">
             <button class="button">
                 <i class="fa fa-download"></i> Download
             </button>
@@ -46,7 +49,8 @@
     </div>
     <br>
     <div class="project-image-container">
-        <img src="img/projects/p3s-vscode/p3s-vscode.png" style="width: 50%;" class="project-image">
+        <img src="img/projects/taskyr/taskyr-1.PNG" style="width: 35%;" class="project-image">
+        <img src="img/projects/taskyr/taskyr-2.PNG" style="width: 35%;" class="project-image">
     </div>
 </section>
 
