POSTAL: Onslaught project page, music update!

--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
             <h3>Meow Miner</h3>
             <p>An arcade-style game featuring a cat protagonist with a penchant for underground mining</p>
         </a>
+        <a href="postal-onslaught.html" class="projects-item">
+            <img src="img/projects/postal-onslaught/project_thumbnail.png" alt="POSTAL: Onslaught" class="project-image">
+            <h3>POSTAL: Onslaught</h3>
+            <p>2D Retro arcade shoot-em-up with randomly generated elements!</p>
+        </a>
         <a href="dog-petting-simulator" class="projects-item">
             <img src="img/projects/dog-petting-simulator/project_thumbnail.png" alt="DOG PETTING SIMULATOR" class="project-image">
             <h3>DOG PETTING SIMULATOR</h3>
@@ -124,11 +129,11 @@
             <h3>SCREENSHOTTER</h3>
             <p>A simple tool to quickly and easily take cropped screenshots!</p>
         </a>-->
-        <a href="p3s-documentation" class="projects-item">
+        <!--<a href="p3s-documentation" class="projects-item">
             <img src="img/projects/p3s-documentation/p3-script-documentation.png" alt="Postal3Script Documentation" class="project-image">
             <h3>Postal3Script Documentation</h3>
             <p>Comprehensive online documentation for Postal III's proprietary scripting language</p>
-        </a>
+        </a>-->
         <a href="p3s-vscode" class="projects-item">
             <img src="img/projects/p3s-vscode/project_thumbnail.png" alt="Postal3Script Language Support for VSCode" class="project-image">
             <h3>Postal3Script Language Support for VSCode</h3>
@@ -149,6 +154,18 @@
         <!--<button class="music-button" onclick="playMusic('music/ArtificePredance.mp3', 'Artifice Predance', this)">
             <i class="fas fa-play"></i> Play "Artifice Predance"
         </button>-->
+        <button class="music-button" onclick="playMusic('music/ANOTHER HIM (remix).mp3', 'ANOTHER HIM (remix)', this)">
+            <i class="fas fa-play"></i> Play "ANOTHER HIM (remix)"
+        </button>
+        <button class="music-button" onclick="playMusic('music/Duel of Destiny.mp3', 'Duel of Destiny', this)">
+            <i class="fas fa-play"></i> Play "Duel of Destiny"
+        </button>
+        <button class="music-button" onclick="playMusic('music/Remnants.mp3', 'Remnants', this)">
+            <i class="fas fa-play"></i> Play "Remnants"
+        </button>
+        <button class="music-button" onclick="playMusic('music/Lament of the Lost.mp3', 'Lament of the Lost', this)">
+            <i class="fas fa-play"></i> Play "Lament of the Lost"
+        </button>
         <button class="music-button" onclick="playMusic('music/CradlingBricks.mp3', 'Cradling Bricks', this)">
             <i class="fas fa-play"></i> Play "Cradling Bricks"
         </button>
