--- a/meow-miner.html
+++ b/meow-miner.html
@@ -33,7 +33,7 @@
     <br>
     <b>Engine:</b> Unity C#
     <br>
-    <b>Status:</b> <b style="color: rgb(10, 221, 38);">IN DEVELOPMENT!</b>
+    <b>Status:</b> <b style="color: rgb(203, 10, 221);">DEVELOPMENT PAUSED!</b>
     <br>
     <div class="project-image-container">
         <img src="img/projects/meow-miner/meow-miner.png" style="width: 40%;" class="project-image">
