--- a/postal-iii-ultrapatch.html
+++ b/postal-iii-ultrapatch.html
@@ -34,6 +34,18 @@
     <b>Engine:</b> Source Engine C++
     <br>
     <b>Status:</b> <b style="color: rgb(10, 221, 38);">IN DEVELOPMENT!</b>
+    <div class="button-container">
+        <a href="https://github.com/Pseudonym-Tim/SCREENSHOTTER">
+            <button class="button">
+                <i class="fab fa-github"></i> View On Github
+            </button>
+        </a> 
+        <a href="https://github.com/Pseudonym-Tim/SCREENSHOTTER/releases/latest/download/SCREENSHOTTER.exe">
+            <button class="button">
+                <i class="fa fa-download"></i> Download
+            </button>
+        </a> 
+    </div>
     <br>
     <br>
     <div class="project-image-container">
