POSTAL: Onslaught project tweaks

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p>An arcade-style game featuring a cat protagonist with a penchant for underground mining</p>
         </a>
         <a href="postal-onslaught.html" class="projects-item">
-            <img src="img/projects/postal-onslaught/project_thumbnail.png" alt="POSTAL: Onslaught" class="project-image">
+            <img src="img/projects/postal-onslaught/project_thumbnail.png" style="max-width: 85%;" alt="POSTAL: Onslaught" class="project-image">
             <h3>POSTAL: Onslaught</h3>
             <p>2D Retro arcade shoot-em-up with randomly generated elements!</p>
         </a>
