Project page updates!
Revealed previously hidden projects, like ultrapatch p3s documentation and screenshotter

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
             <h3>Catharsis Reborn</h3>
             <p>A total conversion mod for Postal III that acts as a free unofficial sequel to POSTAL 2 and its expansion, Apocalypse Weekend</p>
         </a>
-       <!--  <a href="postal-iii-ultrapatch" class="projects-item">
-            <img src="img/projects/postal-iii-ultrapatch/project_thumbnail.png" alt="Catharsis Reborn" class="project-image">
+       <a href="postal-iii-ultrapatch" class="projects-item">
+            <img src="img/projects/postal-iii-ultrapatch/project_thumbnail.png" style="max-width: 85%;" alt="Postal 3 Ultrapatch" class="project-image">
             <h3>Postal III Ultrapatch</h3>
             <p>An unofficial patch for Postal III that fixes and improves a ton of things, including adding back cut content!</p>
-        </a>-->
+        </a>
         <a href="rong" class="projects-item">
             <img src="img/projects/rong/project_thumbnail.png" alt="RONG" class="project-image">
             <h3>RONG</h3>
@@ -124,16 +124,16 @@
             <h3>TASKYR</h3>
             <p>A simple yet powerful productivity tool designed to help you stay focused and manage your time effectively!</p>
         </a>
-        <!--<a href="screenshotter" class="projects-item">
+        <a href="screenshotter" class="projects-item">
             <img src="img/projects/screenshotter/screenshotter.gif" alt="SCREENSHOTTER" class="project-image">
             <h3>SCREENSHOTTER</h3>
             <p>A simple tool to quickly and easily take cropped screenshots!</p>
-        </a>-->
-        <!--<a href="p3s-documentation" class="projects-item">
+        </a>
+        <a href="p3s-documentation" class="projects-item">
             <img src="img/projects/p3s-documentation/p3-script-documentation.png" alt="Postal3Script Documentation" class="project-image">
             <h3>Postal3Script Documentation</h3>
             <p>Comprehensive online documentation for Postal III's proprietary scripting language</p>
-        </a>-->
+        </a>
         <a href="p3s-vscode" class="projects-item">
             <img src="img/projects/p3s-vscode/project_thumbnail.png" alt="Postal3Script Language Support for VSCode" class="project-image">
             <h3>Postal3Script Language Support for VSCode</h3>
