--- a/postal-iii-ultrapatch.html
+++ b/postal-iii-ultrapatch.html
@@ -30,19 +30,14 @@
     <h2>Postal III Ultrapatch</h2>
     <p>An unofficial patch for Postal III that fixes and improves a ton of things, including adding back cut content, making the game much more bearable to play!
     <br>
-    Now featuring over 70+ different fixes, additions, and gameplay improvements!</p>
+    Now featuring over 150+ different fixes, additions, and gameplay improvements!</p>
     <b>Engine:</b> Source Engine C++
     <br>
-    <b>Status:</b> <b style="color: rgb(10, 221, 38);">IN DEVELOPMENT!</b>
+    <b>Status:</b> <b style="color: rgb(10, 221, 38);">RELEASED v1.1.4!</b>
     <div class="button-container">
-        <a href="https://github.com/Pseudonym-Tim/SCREENSHOTTER">
+        <a href="https://www.moddb.com/mods/postal-iii-ultrapatch">
             <button class="button">
-                <i class="fab fa-github"></i> View On Github
-            </button>
-        </a> 
-        <a href="https://github.com/Pseudonym-Tim/SCREENSHOTTER/releases/latest/download/SCREENSHOTTER.exe">
-            <button class="button">
-                <i class="fa fa-download"></i> Download
+                <i class="fa-solid fa-wrench"></i> View On Moddb!
             </button>
         </a> 
     </div>
