--- a/postal-iii-ultrapatch.html
+++ b/postal-iii-ultrapatch.html
@@ -39,6 +39,11 @@
             <button class="button">
                 <i class="fa-solid fa-wrench"></i> View On Moddb!
             </button>
+        </a>   
+        <a href="p3-ultrapatch-changelog">
+            <button class="button">
+                <i class="fa-solid fa-magnifying-glass"></i> Read Changelog!
+            </button>
         </a> 
     </div>
     <br>
