--- a/p3-ultrapatch-changelog.html
+++ b/p3-ultrapatch-changelog.html
@@ -32,7 +32,8 @@
 
     <div class="changelog">
         <h1>v1.1.4 CHANGELOG:</h1>
-        <p>Special thanks to the community for some helpful feedback and testing so soon after release! You guys are the best!</p>
+        <p>A couple of hotfixes and tweaks to supplement the v1.0.0 release! Yay!
+        <br>Special thanks to the community for some helpful feedback and testing so soon after release! You guys are the best!</p>
         <h3>FIXES:</h3>
         <p>* Fixed not being able to install a new ultrapatch version using the installer <br />* Fixed a prominent issue where the weemote could cause a crash when switching weapons<br />* Fixed an issue regarding shopvac saving/restoration<br />* Fixed not being able to knock out NPC's with spray weapons<br />* Fixed vaulting tutorial text on paradise dream bridge being incorrect</p>
         <h3>IMPROVEMENTS/ADDITIONS/CHANGES:</h3>
