--- a/p3-ultrapatch-changelog.html
+++ b/p3-ultrapatch-changelog.html
@@ -31,11 +31,53 @@
     <p>NOTE: Some changes, additions, or fixes might have missed or intentionally omitted, only the more mentionable things are listed!</p>
 
     <div class="changelog">
+        <h1>v1.2.0 CHANGELOG:</h1>
+        <p>Alright! A lot of fixes and improvements and whatnot!
+        Don't worry, we heard you loud and clear and added the unique weapon keybind system back to the weapon selector! 
+        <br>
+        We're aware of missing detail sprites for various maps, it's a bit of a painstaking process to fix and will be rectified in the future!</p>
+        <h3>FIXES:</h3>
+        <p>* Fixed NPC's dropping badgersaw as a weapon pickup in certain circumstances</p>
+        <p>* Fixed sniper rifle not updating hold position</p>
+        <p>* Fixed NPC's running around on fire or running away from bees with the weapon still in their hands!</p>
+        <p>* Fixed badgersaw camera shake sequence still playing after jump</p>
+        <p>* Fixed player being able to get ragdolled during arrest sequence, causing issues</p>
+        <p>* Fixed flashing effect appearing on dropped weapon pickups that the player can't even use</p>
+        <p>* Fixed "Task is null! Fix it!" message being spammed in console in some circumstances</p>
+        <p>* Fixed new objective notification appearing in free roam</p>
+        <p>* Fixed weapon selector not allowing you to switch weapons in specific circumstances</p>
+        <p>* Fixed crash due to nailbat, machete, and baton usage</p>
+        <p>* Fixed machete disappearing when thrown</p>
+        <p>* Fixed broken weapon physics models for sniper, m16, nailbat, and deagle</p>
+        <p>* Fixed ultrapatch website link in tip text</p>
+        <p>* Fixed NPC headblob not being destroyed sometimes</p>
+        <p>* Fixed a crash that can occur while fighting hugo chavez</p>
+        <p>* Fixed jesus indicator counting zombie/boss kills</p>
+        <p>* Fixed player coat clipping issues (due to physx now being enabled by default again)</p>
+        <p>* Fixed being able to ragdoll/kill NPC's with certain FSM items</p>
+
+        <h3>IMPROVEMENTS/ADDITIONS/CHANGES:</h3>
+        <p>* Rebalanced fartgun because of it being too overpowered</p>
+        <p>* Improved player interaction</p>
+        <p>+ Added back dedicated weapon keybinds for weapon selector</p>
+        <p>* Weemote piss is now fully replenished on level load</p>
+        <p>* Rebalanced sniper rifle, increased firerate and damage</p>
+        <p>* Reverted "mat_queue_mode" back to -2 until further notice</p>
+        <p>* Reverted "physx_enabled" back to 1 until further notice</p>
+        <p>* Player can now not be ragdolled when he's taking a hostage, arresting someone, or kicking</p>
+        <p>* Free roam maps now give you maximum ammo for all weapons now</p>
+        <p>+ Added updated soup.ttf font from Zoom patch, fixing issues with translations</p>
+        <p>+ Added russian localization improvements and weapon icons (Thanks MeeMdic!)</p>
+
         <h1>v1.1.4 CHANGELOG:</h1>
         <p>A couple of hotfixes and tweaks to supplement the v1.0.0 release! Yay!
         <br>Special thanks to the community for some helpful feedback and testing so soon after release! You guys are the best!</p>
         <h3>FIXES:</h3>
-        <p>* Fixed not being able to install a new ultrapatch version using the installer <br />* Fixed a prominent issue where the weemote could cause a crash when switching weapons<br />* Fixed an issue regarding shopvac saving/restoration<br />* Fixed not being able to knock out NPC's with spray weapons<br />* Fixed vaulting tutorial text on paradise dream bridge being incorrect</p>
+        <p>* Fixed not being able to install a new ultrapatch version using the installer
+        <p>* Fixed a prominent issue where the weemote could cause a crash when switching weapons
+        <p>* Fixed an issue regarding shopvac saving/restoration
+        <p>* Fixed not being able to knock out NPC's with spray weapons
+        <p>* Fixed vaulting tutorial text on paradise dream bridge being incorrect
         <h3>IMPROVEMENTS/ADDITIONS/CHANGES:</h3>
         <p>* NPC's get knocked out much faster by spray weapons</p>
         <h1>v1.0.0 CHANGELOG:</h1>
