--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
         <a href="index#projects">Projects</a>
         <a href="index#music">Music</a>
         <a href="index#art">Art</a>
-        <!-- <a href="blog">Blog</a>-->
+        <a href="blog">Blog</a>
         <a href="index#contact">Contact</a>
     </div>
 </div>
@@ -29,27 +29,14 @@
 <section id="blog" class="section">
     <h2>Tim's Blog</h2>
     <p>Technical ramblings, project updates, horrible opinions, and a shocking lack of pie recipes...</p>
-    Nothing here yet! Maybe in the future!
-    <!-- <div class="blog-container">
+   <div class="blog-container">
         <div class="blog-item">
-            <h3>Blog Post 1</h3>
-            <p class="blog-meta">Posted on May 23, 2024</p>
-            <p>This is a simple summary of the blog post.</p>
-            <p><a href="#">Read more...</a></p>
+            <h3>Building Procedural Levels in POSTAL: Onslaught</h3>
+            <p class="blog-meta">Posted on September 27, 2024</p>
+            <p>An in-depth look at the custom scripting language I developed for procedural level generation in POSTAL: Onslaught, a game jam entry inspired by the POSTAL series!</p>
+            <p><a href="blogs/blog-(9-27-2024)">Read more...</a></p>
         </div>
-        <div class="blog-item">
-            <h3>Blog Post 2</h3>
-            <p class="blog-meta">Posted on May 22, 2024</p>
-            <p>This is a simple summary of the blog post.</p>
-            <p><a href="#">Read more...</a></p>
-        </div>
-        <div class="blog-item">
-            <h3>Blog Post 3</h3>
-            <p class="blog-meta">Posted on May 21, 2024</p>
-            <p>This is a simple summary of the blog post.</p>
-            <p><a href="#">Read more...</a></p>
-        </div>
-    </div>-->
+    </div>
 </section>
 
 <script src="main.js"></script>
