--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#projects">Projects</a>
         <a href="#music">Music</a>
         <a href="#art">Art</a>
-        <!-- <a href="blog">Blog</a>-->
+        <a href="blog">Blog</a>
         <a href="#contact">Contact</a>
     </div>
 </div>
@@ -97,7 +97,7 @@
         <a href="postal-onslaught.html" class="projects-item">
             <img src="img/projects/postal-onslaught/project_thumbnail.png" style="max-width: 85%;" alt="POSTAL: Onslaught" class="project-image">
             <h3>POSTAL: Onslaught</h3>
-            <p>2D Retro arcade shoot-em-up with randomly generated elements!</p>
+            <p>A retro top-down arcade shooter set in the chaotic world of the POSTAL series!</p>
         </a>
         <a href="dog-petting-simulator" class="projects-item">
             <img src="img/projects/dog-petting-simulator/project_thumbnail.png" alt="DOG PETTING SIMULATOR" class="project-image">
