--- a/postal-iii-ultrapatch.html
+++ b/postal-iii-ultrapatch.html
@@ -20,7 +20,7 @@
         <a href="index#projects">Projects</a>
         <a href="index#music">Music</a>
         <a href="index#art">Art</a>
-        <!-- <a href="blog">Blog</a>-->
+        <a href="blog">Blog</a>
         <a href="index#contact">Contact</a>
     </div>
 </div>
